Replace guava immutable collections with Java ones in tests
Now that Java has {List,Set,Map}.of and friends, we don't need to use so much
guava.

This commit only touches tests.